# 20250721-testjoin

./: CMakeLists.txt
src/: CMakeLists.txt  columnar_main.c
src/include/: columnar_hashjoin.h  memory.h
src/lib/: columnar_hashjoin.c
